# qbo_coa_sync

./: .gitignore  README.md  license.txt  pyproject.toml
.github/workflows/: tests.yml
qbo_coa_sync/: hooks.py  modules.txt  patches.txt
qbo_coa_sync/api/: compare.py  oauth.py  qbo_client.py  sync.py
qbo_coa_sync/fixtures/: custom_field.json
qbo_coa_sync/qbo_coa_sync/doctype/quickbooks_account_cache/: quickbooks_account_cache.json  quickbooks_account_cache.py
qbo_coa_sync/qbo_coa_sync/doctype/quickbooks_account_type_mapping/: quickbooks_account_type_mapping.json  quickbooks_account_type_mapping.py
qbo_coa_sync/qbo_coa_sync/doctype/quickbooks_settings/: quickbooks_settings.js  quickbooks_settings.json  quickbooks_settings.py
qbo_coa_sync/qbo_coa_sync/page/coa_compare/: coa_compare.css  coa_compare.js  coa_compare.json
qbo_coa_sync/tests/: test_hierarchy.py  test_match_algorithm.py  test_oauth.py  test_sync_erpnext_to_qbo.py  test_sync_qbo_to_erpnext.py  test_type_mapping.py
qbo_coa_sync/utils/: type_mapping.py
