[project]
name = "qbo_coa_sync"
version = "0.1.0"
description = "Compare and sync the Chart of Accounts between QuickBooks Online and ERPNext."
authors = [
    { name = "Greensight Ag", email = "james@greensightag.com" },
]
license = { file = "license.txt" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "qbo_coa_sync"
